The LoggedIn page is finished with the dropdown menu

--- a/logged-in.html
+++ b/logged-in.html
@@ -67,8 +67,16 @@
             </div>
 
             <div class="navbar-right">
-                <ul>
-                    <li class="navbar-email">camilayokoo@gmail.com</li>
+                <ul class="email-dropdown">
+                    <li class="navbar-email email-dropbtn">
+                        camilayokoo@gmail.com
+                        <span></span>
+                        <div class="email-dropdown-content">
+                            <a href="#">My orders</a>
+                            <a href="#">My account</a>
+                            <a href="#">Sign out</a>
+                        </div>
+                    </li>
                     <li class="navbar-hopping-cart">
                         <img src="./assets/icons/icon_shopping_cart.svg" alt="shopping cart">
                         <div>2</div>
