Se agregan nuevas páginas con sus estilos

--- a/create-password.html
+++ b/create-password.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,9 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/navbar.css">
     <link rel="stylesheet" href="./assets/css/login.css">
-    <title>Yard - Landingpage</title>
+    <title>Create Password</title>
 </head>
-
 <body>
     <header>
         <nav>
@@ -81,30 +79,22 @@
         </nav>
     </header>
     <main>
-        <div class="login">
-            <div class="close-icon-container">
-                <a href="/">
-                    <img src="./assets/icons/icon_close.png" alt="Close X icon" title="Close" class="close-icon">
-                </a>
-            </div>
+        <div class="recover-password">
             <div class="form-container">
                 <img src="./assets/imgs/logo_yard_sale.svg" alt="logo" class="login-logo">
-
-                <form action="./logged-in.html" class="form">
-                    <label for="email" class="label">Email address</label>
-                    <input type="text" id="email" placeholder="example@tibecvp.com" class="input input-email">
+    
+                <form action="./my-account.html" class="form">
+                    <h2>Create a new password</h2>
+                    <p>Enter a new password for your account</p>
                     <label for="password" class="label">Password</label>
                     <input type="password" id="password" placeholder="*********" class="input input-password">
-
-                    <input type="submit" value="Log in" class="primary-button login-button">
-                    <a href="./recover-password.html">Forgot my password</a>
+                    <label for="new-password" class="label">Re-enter password</label>
+                    <input type="password" id="new-password" placeholder="*********" class="input input-password">
+    
+                    <input type="submit" value="Confirm" class="primary-button login-button">
                 </form>
-
             </div>
-            <button class="secondary-button signup-button" type="button" onclick="window.location.href='./Old/create-account.html';">Sign up</button>
         </div>
     </main>
-    <footer></footer>
 </body>
-
 </html>
