--- a/logged-in.html
+++ b/logged-in.html
@@ -32,10 +32,13 @@
                         <a href="/">Electronics</a>
                         <a href="/">Furnitures</a>
                         <a href="/">Toys</a>
-                        <a href="/">Others</a>
+                        <a href="/" class="end-section">Others</a>
+                        <a href="/">My orders</a>
+                        <a href="/">My account</a>
                     </div>
                     <div class="menu-down">
-                        <a href="/">Log out</a>
+                        <p>camilayokoo@gmail.com</p>
+                        <a href="/">Sign out</a>
                     </div>
                 </div>
             </div>
@@ -74,7 +77,7 @@
                         <div class="email-dropdown-content">
                             <a href="#">My orders</a>
                             <a href="#">My account</a>
-                            <a href="#">Sign out</a>
+                            <a href="/">Sign out</a>
                         </div>
                     </li>
                     <li class="navbar-hopping-cart">
