--- a/email-sent.html
+++ b/email-sent.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/navbar.css">
     <link rel="stylesheet" href="./assets/css/login.css">
-    <title>Yard - Landingpage</title>
+    <title>Email sent</title>
 </head>
 
 <body>
@@ -81,30 +81,28 @@
         </nav>
     </header>
     <main>
-        <div class="login">
-            <div class="close-icon-container">
-                <a href="/">
-                    <img src="./assets/icons/icon_close.png" alt="Close X icon" title="Close" class="close-icon">
-                </a>
-            </div>
+        <div class="recover-password">
             <div class="form-container">
                 <img src="./assets/imgs/logo_yard_sale.svg" alt="logo" class="login-logo">
 
-                <form action="./logged-in.html" class="form">
-                    <label for="email" class="label">Email address</label>
-                    <input type="text" id="email" placeholder="example@tibecvp.com" class="input input-email">
-                    <label for="password" class="label">Password</label>
-                    <input type="password" id="password" placeholder="*********" class="input input-password">
+                <form action="./create-password.html" class="form">
+                    <h2>Email has been sent!</h2>
+                    <p>Please check you inbox for instructions on how to reset the password</p>
 
-                    <input type="submit" value="Log in" class="primary-button login-button">
-                    <a href="./recover-password.html">Forgot my password</a>
+                    <div class="email-image">
+                        <img src="./assets/icons/email.svg" alt="email">
+                    </div>
+
+                    <input type="submit" value="Login" class="primary-button login-button">
+                    <p>
+                        Didn't receive the email? 
+                        <a href="./recover-password.html">Resend</a>
+                    </p>
                 </form>
 
             </div>
-            <button class="secondary-button signup-button" type="button" onclick="window.location.href='./Old/create-account.html';">Sign up</button>
         </div>
     </main>
-    <footer></footer>
 </body>
 
 </html>
