Se agregan nuevas páginas con los estilos

--- a/logged-in.html
+++ b/logged-in.html
@@ -33,8 +33,8 @@
                         <a href="/">Furnitures</a>
                         <a href="/">Toys</a>
                         <a href="/" class="end-section">Others</a>
-                        <a href="/">My orders</a>
-                        <a href="/">My account</a>
+                        <a href="./my-orders.html">My orders</a>
+                        <a href="./my-account.html">My account</a>
                     </div>
                     <div class="menu-down">
                         <p>camilayokoo@gmail.com</p>
@@ -44,7 +44,7 @@
             </div>
 
             <div class="navbar-left">
-                <a href="/">
+                <a href="#">
                     <img src="./assets/imgs/logo_yard_sale.svg" alt="logo" class="logo">
                 </a>
                 <ul>
@@ -75,8 +75,8 @@
                         camilayokoo@gmail.com
                         <span></span>
                         <div class="email-dropdown-content">
-                            <a href="#">My orders</a>
-                            <a href="#">My account</a>
+                            <a href="./my-orders.html">My orders</a>
+                            <a href="./my-account.html">My account</a>
                             <a href="/">Sign out</a>
                         </div>
                     </li>
