--- a/login.html
+++ b/login.html
@@ -101,7 +101,7 @@
                 </form>
 
             </div>
-            <button class="secondary-button signup-button" type="button" onclick="window.location.href='./Old/create-account.html';">Sign up</button>
+            <button class="secondary-button signup-button" type="button" onclick="window.location.href='./create-account.html';">Sign up</button>
         </div>
     </main>
     <footer></footer>
