--- a/login.html
+++ b/login.html
@@ -27,12 +27,12 @@
                             <img src="./assets/icons/icon_close.png" alt="Close X icon">
                         </a>
                         <p>CATEGORIES</p>
-                        <a href="/">All</a>
-                        <a href="/">Clothes</a>
-                        <a href="/">Electronics</a>
-                        <a href="/">Furnitures</a>
-                        <a href="/">Toys</a>
-                        <a href="/">Others</a>
+                        <a href="./">All</a>
+                        <a href="./">Clothes</a>
+                        <a href="./">Electronics</a>
+                        <a href="./">Furnitures</a>
+                        <a href="./">Toys</a>
+                        <a href="./">Others</a>
                     </div>
                     <div class="menu-down">
                         <a href="./login.html">Log in</a>
@@ -41,28 +41,28 @@
             </div>
 
             <div class="navbar-left">
-                <a href="/">
+                <a href="./">
                     <img src="./assets/imgs/logo_yard_sale.svg" alt="logo" class="logo">
                 </a>
 
                 <ul>
                     <li>
-                        <a href="/">All</a>
+                        <a href="./">All</a>
                     </li>
                     <li>
-                        <a href="/">Clothes</a>
+                        <a href="./">Clothes</a>
                     </li>
                     <li>
-                        <a href="/">Electronics</a>
+                        <a href="./">Electronics</a>
                     </li>
                     <li>
-                        <a href="/">Furniture</a>
+                        <a href="./">Furniture</a>
                     </li>
                     <li>
-                        <a href="/">Toys</a>
+                        <a href="./">Toys</a>
                     </li>
                     <li>
-                        <a href="/">Others</a>
+                        <a href="./">Others</a>
                     </li>
                 </ul>
             </div>
@@ -83,7 +83,7 @@
     <main>
         <div class="login">
             <div class="close-icon-container">
-                <a href="/">
+                <a href="./">
                     <img src="./assets/icons/icon_close.png" alt="Close X icon" title="Close" class="close-icon">
                 </a>
             </div>
