--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                             <img src="./assets/icons/icon_close.png" alt="Close X icon">
                         </a>
                         <p>CATEGORIES</p>
-                        <a href="/">All</a>
-                        <a href="/">Clothes</a>
-                        <a href="/">Electronics</a>
-                        <a href="/">Furnitures</a>
-                        <a href="/">Toys</a>
-                        <a href="/">Others</a>
+                        <a href="./">All</a>
+                        <a href="./">Clothes</a>
+                        <a href="./">Electronics</a>
+                        <a href="./">Furnitures</a>
+                        <a href="./">Toys</a>
+                        <a href="./">Others</a>
                     </div>
                     <div class="menu-down">
                         <a href="./login.html">Log in</a>
@@ -41,28 +41,28 @@
             </div>
 
             <div class="navbar-left">
-                <a href="/">
+                <a href="./">
                     <img src="./assets/imgs/logo_yard_sale.svg" alt="logo" class="logo">
                 </a>
 
                 <ul>
                     <li>
-                        <a href="/">All</a>
+                        <a href="./">All</a>
                     </li>
                     <li>
-                        <a href="/">Clothes</a>
+                        <a href="./">Clothes</a>
                     </li>
                     <li>
-                        <a href="/">Electronics</a>
+                        <a href="./">Electronics</a>
                     </li>
                     <li>
-                        <a href="/">Furniture</a>
+                        <a href="./">Furniture</a>
                     </li>
                     <li>
-                        <a href="/">Toys</a>
+                        <a href="./">Toys</a>
                     </li>
                     <li>
-                        <a href="/">Others</a>
+                        <a href="./">Others</a>
                     </li>
                 </ul>
             </div>
@@ -94,22 +94,22 @@
                 </div>
                 <div class="filters-component">
                     <div class="filter">
-                        <a href="/">All</a>
+                        <a href="./">All</a>
                     </div>
                     <div class="filter">
-                        <a href="/">Clothes</a>
+                        <a href="./">Clothes</a>
                     </div>
                     <div class="filter">
-                        <a href="/">Electronics</a>
+                        <a href="./">Electronics</a>
                     </div>
                     <div class="filter">
-                        <a href="/">Furniture</a>
+                        <a href="./">Furniture</a>
                     </div>
                     <div class="filter">
-                        <a href="/">Toys</a>
+                        <a href="./">Toys</a>
                     </div>
                     <div class="filter">
-                        <a href="/">Others</a>
+                        <a href="./">Others</a>
                     </div>
                 </div>
                 <div class="sort-component">
