--- a/my-orders.html
+++ b/my-orders.html
@@ -28,18 +28,18 @@
                                 <img src="./assets/icons/icon_close.png" alt="Close X icon">
                             </a>
                             <p>CATEGORIES</p>
-                            <a href="/">All</a>
-                            <a href="/">Clothes</a>
-                            <a href="/">Electronics</a>
-                            <a href="/">Furnitures</a>
-                            <a href="/">Toys</a>
-                            <a href="/" class="end-section">Others</a>
+                            <a href="./">All</a>
+                            <a href="./">Clothes</a>
+                            <a href="./">Electronics</a>
+                            <a href="./">Furnitures</a>
+                            <a href="./">Toys</a>
+                            <a href="./" class="end-section">Others</a>
                             <a href="#">My orders</a>
                             <a href="./my-account.html">My account</a>
                         </div>
                         <div class="menu-down">
                             <p>camilayokoo@gmail.com</p>
-                            <a href="/">Sign out</a>
+                            <a href="./">Sign out</a>
                         </div>
                     </div>
                 </div>
@@ -50,22 +50,22 @@
                     </a>
                     <ul>
                         <li>
-                            <a href="/">All</a>
+                            <a href="./">All</a>
                         </li>
                         <li>
-                            <a href="/">Clothes</a>
+                            <a href="./">Clothes</a>
                         </li>
                         <li>
-                            <a href="/">Electronics</a>
+                            <a href="./">Electronics</a>
                         </li>
                         <li>
-                            <a href="/">Furniture</a>
+                            <a href="./">Furniture</a>
                         </li>
                         <li>
-                            <a href="/">Toys</a>
+                            <a href="./">Toys</a>
                         </li>
                         <li>
-                            <a href="/">Others</a>
+                            <a href="./">Others</a>
                         </li>
                     </ul>
                 </div>
@@ -78,7 +78,7 @@
                             <div class="email-dropdown-content">
                                 <a href="#">My orders</a>
                                 <a href="./my-account.html">My account</a>
-                                <a href="/">Sign out</a>
+                                <a href="./">Sign out</a>
                             </div>
                         </li>
                         <li class="navbar-hopping-cart">
