Adding a link to the resources page on the homepages

--- a/index.html
+++ b/index.html
@@ -236,6 +236,9 @@
 
             </div>
         </section>
+        <section class="designs-link">
+            <a href="./important-info.html" target="_blank">Figma designs and other resources</a>
+        </section>
     </main>
     <footer></footer>
 </body>
