--- a/logged-in.html
+++ b/logged-in.html
@@ -348,6 +348,9 @@
                 </a>
             </div>
         </section>
+        <section class="designs-link">
+            <a href="./important-info.html" target="_blank">Figma designs and other resources</a>
+        </section>
     </main>
     <footer></footer>
 </body>
